--- a/index.html
+++ b/index.html
@@ -101,11 +101,46 @@
             0% { transform: translateY(-20px) rotate(0deg); opacity: 0.7; }
             100% { transform: translateY(100vh) rotate(360deg); opacity: 0; }
         }
+        .floating-heart {
+            position: absolute;
+            font-size: 1.5rem;
+            color: #ff9ab2;
+            cursor: pointer;
+            animation: float 5s infinite linear;
+        }
+        @keyframes float {
+            0% { transform: translateY(100vh); opacity: 0.5; }
+            100% { transform: translateY(-10vh); opacity: 0; }
+        }
+        .heart-pop {
+            position: absolute;
+            font-size: 1rem;
+            color: white;
+            background: rgba(255, 105, 145, 0.8);
+            padding: 0.5rem 1rem;
+            border-radius: 10px;
+            animation: pop 1s ease-out forwards;
+        }
+        @keyframes pop {
+            0% { transform: scale(1); opacity: 1; }
+            100% { transform: scale(1.5); opacity: 0; }
+        }
         .prompt-question {
             font-size: 2.5rem;
             text-align: center;
             margin-bottom: 2rem;
             text-shadow: 0 0 10px rgba(255, 255, 255, 0.8);
+            animation: typing 2s steps(20) forwards, cursor 0.5s step-end infinite;
+            white-space: nowrap;
+            overflow: hidden;
+            border-right: 2px solid white;
+        }
+        @keyframes typing {
+            from { width: 0; }
+            to { width: 100%; }
+        }
+        @keyframes cursor {
+            50% { border-color: transparent; }
         }
         .reveal-btn {
             margin: 0.5rem;
@@ -116,14 +151,32 @@
             color: white;
             cursor: pointer;
             border-radius: 20px;
-            transition: all 0.3s;
+            transition: all 0.3s ease;
             box-shadow: 0 0 15px rgba(255, 105, 145, 0.6);
             font-family: 'Parisienne', cursive;
-            touch-action: manipulation;
+            animation: buttonBeat 1.5s infinite;
+            position: relative;
         }
         .reveal-btn:hover {
             background: #ff4d79;
             transform: scale(1.1);
+        }
+        .reveal-btn:hover::after {
+            content: attr(data-hover);
+            position: absolute;
+            top: -2rem;
+            left: 50%;
+            transform: translateX(-50%);
+            background: rgba(255, 105, 145, 0.8);
+            padding: 0.3rem 0.6rem;
+            border-radius: 5px;
+            font-size: 1rem;
+            color: white;
+        }
+        @keyframes buttonBeat {
+            0% { transform: scale(1); }
+            50% { transform: scale(1.05); }
+            100% { transform: scale(1); }
         }
         #no-btn.shake {
             animation: shake 0.3s;
@@ -141,6 +194,7 @@
             left: 10%;
             opacity: 0.7;
             z-index: 5;
+            animation: fadeIn 2s ease-in;
         }
         .gif-container.right {
             left: auto;
@@ -152,6 +206,52 @@
             height: auto;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+        }
+        .quote-container {
+            position: absolute;
+            top: 5%;
+            text-align: center;
+            font-size: 1.5rem;
+            text-shadow: 0 0 10px rgba(255, 255, 255, 0.8);
+            animation: fadeQuote 6s infinite;
+        }
+        @keyframes fadeQuote {
+            0% { opacity: 0; }
+            20% { opacity: 1; }
+            80% { opacity: 1; }
+            100% { opacity: 0; }
+        }
+        .polaroid-preview {
+            position: absolute;
+            bottom: 10%;
+            background: #fff;
+            padding: 0.5rem;
+            border-radius: 5px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            transform: rotate(5deg);
+            animation: pulse 2s infinite;
+            opacity: 0.8;
+        }
+        .polaroid-preview img {
+            width: 100px;
+            height: auto;
+            filter: blur(2px);
+            border-radius: 5px;
+        }
+        @keyframes pulse {
+            0% { transform: scale(1) rotate(5deg); }
+            50% { transform: scale(1.05) rotate(5deg); }
+            100% { transform: scale(1) rotate(5deg); }
+        }
+        .heart-particle {
+            position: absolute;
+            font-size: 1rem;
+            color: #ff9ab2;
+            animation: particleBurst 1s ease-out forwards;
+        }
+        @keyframes particleBurst {
+            0% { transform: scale(1); opacity: 1; }
+            100% { transform: scale(2) translateY(-50px); opacity: 0; }
         }
         @media (max-width: 600px) {
             .heart {
@@ -188,10 +288,17 @@
                 right: 5%;
                 top: 75%;
             }
+            .quote-container {
+                font-size: 1.2rem;
+            }
+            .polaroid-preview img {
+                width: 80px;
+            }
         }
     </style>
 </head>
 <body>
+    <div class="quote-container" id="quote-container"></div>
     <div class="gif-container">
         <img src="https://media.giphy.com/media/3o6ZtaNfc1H12pM5t6/giphy.gif" alt="Romantic Heart GIF">
     </div>
@@ -201,11 +308,41 @@
     <div class="heart"></div>
     <div class="prompt-question">Do you love me? 💖</div>
     <div>
-        <a href="romantic-message.html"><button class="reveal-btn" onclick="handleYes()">Yes</button></a>
-        <button class="reveal-btn" id="no-btn" onclick="handleNo()">No</button>
+        <a href="romantic-message.html"><button class="reveal-btn" onclick="handleYes()" data-hover="I knew it! 💕">Yes</button></a>
+        <button class="reveal-btn" id="no-btn" onclick="handleNo()" data-hover="Try again, love! 😘">No</button>
     </div>
+    <div class="polaroid-preview">
+        <img src="https://via.placeholder.com/100x100?text=You+and+Me" alt="Couple Photo Preview">
+    </div>
+    <audio id="background-music" autoplay loop>
+        <source src="https://www.royaltyfreemusicclips.com/free_music/romantic_piano.mp3" type="audio/mp3">
+    </audio>
 
     <script>
+        // Auto-play music
+        window.onload = () => {
+            const audio = document.getElementById("background-music");
+            audio.play().catch(() => {
+                document.addEventListener("click", () => audio.play(), { once: true });
+                document.addEventListener("touchstart", () => audio.play(), { once: true });
+            });
+        };
+
+        // Rotating love quotes
+        const quotes = [
+            "You are my heart's favorite place. 💖",
+            "Every moment with you is magic. ✨",
+            "You're my forever and always. 🥰"
+        ];
+        let quoteIndex = 0;
+        const quoteContainer = document.getElementById("quote-container");
+        function rotateQuote() {
+            quoteContainer.textContent = quotes[quoteIndex];
+            quoteIndex = (quoteIndex + 1) % quotes.length;
+        }
+        rotateQuote();
+        setInterval(rotateQuote, 6000);
+
         // Sparkle effect
         function createSparkle() {
             const sparkle = document.createElement("div");
@@ -237,6 +374,28 @@
             createCursorTrail(touch.clientX, touch.clientY);
         });
 
+        // Floating hearts effect
+        function createFloatingHeart() {
+            const heart = document.createElement("div");
+            heart.className = "floating-heart";
+            heart.innerHTML = "💖";
+            heart.style.left = Math.random() * 100 + "vw";
+            heart.style.animationDuration = Math.random() * 3 + 4 + "s";
+            heart.onclick = () => {
+                const pop = document.createElement("div");
+                pop.className = "heart-pop";
+                pop.textContent = ["You're my everything!", "I adore you!", "Forever yours!"][Math.floor(Math.random() * 3)];
+                pop.style.left = heart.style.left;
+                pop.style.top = heart.style.top;
+                document.body.appendChild(pop);
+                heart.remove();
+                setTimeout(() => pop.remove(), 1000);
+            };
+            document.body.appendChild(heart);
+            setTimeout(() => heart.remove(), 5000);
+        }
+        setInterval(createFloatingHeart, 1000);
+
         // Falling petals effect
         function createPetal() {
             const petal = document.createElement("div");
@@ -248,17 +407,32 @@
         }
         setInterval(createPetal, 500);
 
+        // Heart particle burst on Yes click
+        function createHeartParticle(x, y) {
+            const particle = document.createElement("div");
+            particle.className = "heart-particle";
+            particle.innerHTML = "💖";
+            particle.style.left = x + "px";
+            particle.style.top = y + "px";
+            particle.style.transform = `translate(${Math.random() * 100 - 50}px, ${Math.random() * -100}px)`;
+            document.body.appendChild(particle);
+            setTimeout(() => particle.remove(), 1000);
+        }
+
         // Prompt handling
         let noClickCount = 0;
         const noBtn = document.getElementById("no-btn");
         function handleYes() {
-            // Redirect handled by <a> tag
+            const yesBtn = document.querySelector('a[href="romantic-message.html"]');
+            const rect = yesBtn.getBoundingClientRect();
+            for (let i = 0; i < 10; i++) {
+                createHeartParticle(rect.left + rect.width / 2, rect.top + rect.height / 2);
+            }
         }
         function handleNo() {
             noClickCount++;
             noBtn.classList.add("shake");
             setTimeout(() => noBtn.classList.remove("shake"), 300);
-            // Move button randomly
             noBtn.style.position = "absolute";
             noBtn.style.left = Math.random() * (window.innerWidth - 100) + "px";
             noBtn.style.top = Math.random() * (window.innerHeight - 50) + "px";
