--- a/romantic-message.html
+++ b/romantic-message.html
@@ -232,15 +232,15 @@
     </div>
     <button class="reveal-btn" onclick="revealMessage()" id="reveal-btn" data-hover="For My Sweetheart 💕">For My Sweetheart 💕</button>
     <div id="hidden-message">
-        Happy National Girlfriend's Day, my darling! You're my sunshine, my joy, and my forever love. Here's to our magical moments together! 🥰💖
+        Happy National Girlfriend's Day, baby! Hindi tayo magkikita tom kaya eto, lagi ko kasi siyang nakikita sa tiktok HAHAHHA naisipan ko lang medyo paangasin pagbati ko sa'yo, idk if maangas ba'to or corny, pero yeah, I just want you to know na I love you so much, sobra pa sa sobra! 🥰💖
     </div>
     <div class="polaroid">
-        <img src="https://via.placeholder.com/200x200?text=You+and+Me" alt="Couple Photo">
+        <img src="13.jpg" alt="Couple Photo">
         <div class="polaroid-caption">Forever Us 💞</div>
     </div>
     <button class="music-toggle" onclick="toggleMusic()">Pause Music ❄️</button>
     <audio id="background-music" autoplay loop>
-        <source src="https://www.royaltyfreemusicclips.com/free_music/romantic_piano.mp3" type="audio/mp3">
+        <source src="iris.mp3" type="audio/mp3">
     </audio>
 
     <script>
